@@ -3,6 +3,7 @@ Kiwix 0.8 rc2
 * Fix the "no icons available" issue (ID: 2830824)
 * Fixed toolbar icons with RTL languages
 * Improved toolbar UI (added icons & tooltip)
+* Fixed window size/position restore
  
 Kiwix 0.8 rc1
 * High reducing of the xapian index disk usage
